syntax = "proto3";

package calc;
option go_package="calcpb";

message SumRequest {
    int32 first_addend = 1;
    int32 second_addend = 2;
}

message SumResponse {
    int32 sum_result = 1;
}

message PrimeNumberDecompRequest {
    int64 first_num = 1;
}

message PrimeNumberDecompResponse {
    int64 prime_factor = 1;
}

message ComputeAverageRequest {
    int32 number = 1;
}

message ComputeAverageResponse {
    double average = 1;
}
service CalculatorService{
    //Unary

    rpc Sum(SumRequest) returns (SumResponse) {};

    //Server Streaming

    rpc PrimeNumberDecomp(PrimeNumberDecompRequest) returns(stream PrimeNumberDecompResponse){};

    rpc ComputeAverage(stream ComputeAverageRequest) returns(ComputeAverageResponse) {};
}

